--- a/lib/css/prof.css
+++ b/lib/css/prof.css
@@ -1,3 +1,113 @@
+@font-face {
+  font-family: 'DIN';
+  src: url('../fonts/DIN.ttf');
+  src: url('../fonts/DIN.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'DIN Bold';
+  src: url('../fonts/DIN Bold.ttf');
+  src: url('../fonts/DIN Bold.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'DIN Med';
+  src: url('../fonts/DIN Med.ttf');
+  src: url('../fonts/DIN Med.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+
+.shadow-wrapper {
+z-index: 1;
+position: relative;
+}
+
+.tag-box-v1 {
+border-top: solid 2px #009223;
+}
+.shadow-effect-2 {
+position: relative;
+}
+.box-shadow {
+background: #fff;
+position: relative;
+}
+.tag-box-v1 {
+border: solid 1px #009223;
+border-top: solid 5px #009223;
+}
+.tag-box {
+padding: 20px;
+background: #fff;
+margin-bottom: 30px;
+}
+.shadow-wrapper {
+  z-index: 1;  
+  position: relative;
+}
+
+/*Common Style*/
+.box-shadow {
+	background: #fff;
+	position: relative;
+}
+
+.box-shadow:after,
+.box-shadow:before {
+	top: 80%;
+	left: 5px;
+	width: 50%;
+	z-index: -1;
+	content: "";
+	bottom: 15px;
+	max-width: 300px;
+	background: #999;
+	position: absolute;	
+}
+
+ /*Effect 1*/
+.shadow-effect-1 {
+	box-shadow: 0 10px 6px -6px #bbb;
+	-moz-box-shadow: 0 10px 6px -6px #bbb;
+	-webkit-box-shadow: 0 10px 6px -6px #bbb;
+}
+
+ /*Effect 2,3,4*/
+.shadow-effect-2 {
+	position: relative;
+}
+
+.shadow-effect-2:after,
+.shadow-effect-2:before,
+.shadow-effect-3:before,
+.shadow-effect-4:after {
+	transform: rotate(-3deg);
+	-o-transform: rotate(-3deg);
+	-ms-transform: rotate(-3deg);
+	-moz-transform: rotate(-3deg);
+	-webkit-transform: rotate(-3deg);
+	box-shadow: 0 15px 10px #999;
+	-moz-box-shadow: 0 15px 10px #999;
+	-webkit-box-shadow: 0 15px 10px #999;
+}
+
+.shadow-effect-2:after,
+.shadow-effect-4:after {
+	left: auto;
+	right: 5px;
+  transform: rotate(3deg);
+  -o-transform: rotate(3deg);
+  -ms-transform: rotate(3deg);
+  -moz-transform: rotate(3deg);
+  -webkit-transform: rotate(3deg);
+}
+
 .picture {
 	position: relative;
 	-webkit-box-shadow: 0px 1px 1px rgba(0,0,0,.35);
@@ -12,11 +122,16 @@
 	background: #fff;
 }
 
-
+#ssd {
+	padding: 15px 15px 15px 15px;
+	border: none;
+	margin: 0px;
+	background: #fff;
+}
 
 li.active{
     background-color: #F0F0F0;
-    font-family: cursive;
+    font-family: 'DIN';
 }
 
 tombol {
@@ -33,9 +148,7 @@ profil {
 
 materi {
     display: block;
-    padding-top: 4px;
-    padding-top: 20px;
-}
+    }
 pengumuman {
     display: block;
     padding-top: 4px;
@@ -43,13 +156,13 @@ pengumuman {
 
 #gambar-dosen {
  border: 1px solid rgba(0, 0, 0, 0.2);
--webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
--moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
 box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
 float: left;
 margin: 0 20px 0px 0px;
-padding: 4px;
-width: 200px;
+position: relative;
+-webkit-box-shadow: 0px 1px 1px rgba(0,0,0,.35);
+-moz-box-shadow: 0px 1px 1px rgba(0,0,0,.35);
+box-shadow: 0px 1px 1px rgba(0,0,0,.35);
 }
 
 #tombol-materi{
@@ -88,13 +201,13 @@ font-family: 'DIN', sans-serif;
 
 #nama-dosen {
 background : url('../../aset/gbr/bg.jpg');
-font-family: 'DIN Bold', sans-serif;
 font-weight: 400;
 color: #4A4A4A;
-font-size: 24px;
+font-family: 'DIN Bold';
+font-size: 18px;
 margin: 5px 14px 5px 0px;
 text-transform: uppercase;
-font-family: cursive;
+
 }
 
 .tombol-dosen {
